[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.20", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1.21.2", features = ["full"] }
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
langchain-rust = "0.1.1"

